# Barjokart

./: .gitignore  CMakeLists.txt  README.md  astar.cpp  astar.h  image.cpp  image.h  image.hpp  main.cpp  map.cpp  map.h  node.cpp  node.h  output  pixel.h  point.h  point.hpp  toml.hpp
input/: adaptallure.toml  basique.toml  bcnr.toml  circuit0.toml  ever_given.toml  fusee.toml  mulholland_drive.toml  surprise.toml  trois_quatorze.toml
